[improve][ci] Add Netty leak detection reporting to Pulsar CI (#24272)